@@ -114,20 +114,23 @@ Digital normalization
 Read handling: interleaving, splitting, etc.
 ============================================
 
-.. autoprogram:: sweep-reads-buffered:get_parser()
-        :prog: sweep-reads-buffered.py
+.. autoprogram:: extract-long-sequences:get_parser()
+        :prog: extract-long-sequences.py
 
 .. autoprogram:: extract-paired-reads:get_parser()
         :prog: extract-paired-reads.py
 
+.. autoprogram:: fastq-to-fasta:get_parser()
+        :prog: fastq-to-fasta.py
+
 .. autoprogram:: interleave-reads:get_parser()
         :prog: interleave-reads.py
+
+.. autoprogram:: sample-reads-randomly:get_parser()
+        :prog: sample-reads-randomly.py
 
 .. autoprogram:: split-paired-reads:get_parser()
         :prog: split-paired-reads.py
 
-.. autoprogram:: fastq-to-fasta:get_parser()
-        :prog: fastq-to-fasta.py
-
-.. autoprogram:: sample-reads-randomly:get_parser()
-        :prog: sample-reads-randomly.py
+.. autoprogram:: sweep-reads-buffered:get_parser()
+        :prog: sweep-reads-buffered.py
